# cljseq

./: .gitignore  .mcp.json  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  package.json  project.clj  pyproject.toml  shadow-cljs.edn
.github/workflows/: ci.yml
cpp/cljseq-audio/: CMakeLists.txt
cpp/cljseq-audio/src/: audio_io.cpp  clap_host.cpp  main.cpp
cpp/cljseq-sidecar/: CMakeLists.txt
cpp/cljseq-sidecar/src/: ipc.cpp  ipc.h  keyboard_capture.cpp  keyboard_capture.h  main.cpp  midi_clock.cpp  midi_clock.h  midi_dispatch.cpp  midi_dispatch.h  midi_monitor.cpp  midi_monitor.h  osc_dispatch.cpp
cpp/libcljseq-link/: CMakeLists.txt
cpp/libcljseq-link/include/cljseq/: link_engine.h
cpp/libcljseq-link/src/: link_engine.cpp
cpp/libcljseq-rt/: CMakeLists.txt
cpp/libcljseq-rt/include/cljseq/: link_bridge.h  scheduler.h  temporal.h
cpp/libcljseq-rt/src/: clock.cpp  osc.cpp  scheduler.cpp
doc/: attribution.md  design-decisions-open.md  design-distributed-embedded.md  design-memory-field.md  design-sprint-1-summary.md  design-sprint-2-summary.md  design-sprint-3-summary.md  design-sprint-4-summary.md  design-sprint-5-summary.md  design-studio-orchestration.md  design-temporal-buffer.md  design-threshold-extractor.md  documentation-strategy.md  exemplar-beatstep-pro.md  exemplar-keystep-pro.md  exemplar-labyrinth.md  implementation-plan.md  licensing.md  midi-device-research.md  open-design-questions.md  research-and-requirements.md  test-backlog.md  test-data-policy.md  topology-example.edn  user-manual.md
doc/archive/: design-ensemble-improvisation.md  design-note-transformers.md  design-spatial-field.md  design-spectral-resynthesizer.md  design-sprint-1-summary.md  design-sprint-3-summary.md  dsl-usability-corpus.md  handoff-sprint8-cpp.md  implementation-plan.md  intro.md  open-design-questions.md  phase0-readiness.md  spike-itemporalvalue.md
doc/explorations/: README.md
doc/explorations/kosmische/: README.md  notes.md
doc/explorations/step-locks/: README.md
examples/: chaos_demo.clj  getting_started.clj  klank_demo.clj  ks_string_demo.clj  ndlr_fractal.clj  ndlr_hybrid.clj  ndlr_stochastic.clj  rosetta_stone.clj  superkar_demo.clj  waveshaper_demo.clj
python/cljseq_m21/: __init__.py
resources/: studio-topology.edn
resources/arpeggios/: built-in.edn  hydrasynth-phrases.edn
resources/backends/: pd.edn  sc.edn
resources/devices/: arturia-keystep-pro.edn  arturia-keystep.edn  asm-leviasynth.edn  behringer-2600.edn  behringer-k2-mk2.edn  behringer-kobol-expander.edn  behringer-neutron.edn  behringer-pro1.edn  behringer-pro800-stereo-pair.edn  behringer-pro800.edn  behringer-proton.edn  boss-dd-500.edn  boss-es8.edn  boss-md-500.edn  boss-rv-500.edn  boss-sde-3000d.edn  boss-waza-tae.edn  elektron-analog-heat-fx.edn  elektron-digitone.edn  hydrasynth-deluxe.edn  hydrasynth-desktop.edn  hydrasynth-explorer.edn  hydrasynth-keyboard61.edn  intellijel-cascadia.edn  korg-minilogue-xd.edn  moog-minitaur.edn  moog-sub37.edn  moog-subsequent25.edn  musekinetics-12step.edn  novation-peak.edn  novation-summit.edn  roger-linn-linnstrument.edn  singular-sound-beatbuddy.edn  singular-sound-midi-maestro.edn  strymon-nightsky.edn  strymon-volante.edn  torso-t1.edn  two-notes-torpedo-captor-x.edn
resources/public/: index.html
resources/public/css/: style.css
resources/samples/: essentials.edn
resources/synths/: bass.edn  beep.edn  blade.edn  buf-looper.edn  buf-player.edn  chaos-henon.edn  chaos-lorenz.edn  dark-ambience.edn  dpulse.edn  dsaw.edn  dtri.edn  dull-bell.edn  fm.edn  granular-voice.edn  growl.edn  hollow.edn  klank-bars.edn  klank-bell.edn  lorenz-fm.edn  noise.edn  perc.edn  pluck.edn  pretty-bell.edn  prophet.edn  pulse.edn  reverb-bus.edn  s42-drone-voice.edn  s42-filter.edn  s42-papa-voice.edn  s42-vco-voice.edn  saw-pad.edn  saw.edn  sine-bus.edn  sine.edn  solar-drone-voice.edn  solar-filter.edn  solar-papa-voice.edn  solar-vco-voice.edn  subpulse.edn  superkar-voice.edn  (+6 more)
script/: m21_extract.py  m21_server.py  sc-headless.scd
sessions/: mcp-validation.clj  rubycon-core.clj
src/: handoff-websocket-ctrl.md
src/cljseq/: analyze.clj  arc.clj  ardour.clj  arp.clj  bencode.clj  berlin.clj  chord.clj  clock.clj  composition.clj  conductor.clj  config.clj  core.clj  ctrl.clj  device.clj  dirs.clj  dsl.clj  ensemble.clj  ensemble_improv.clj  extractor.clj  flux.clj  fm.clj  fractal.clj  freesound.clj  interval.clj  ivk.clj  journal.clj  journey.clj  learn.clj  link.clj  live.clj  loop.clj  looper.clj  m21.clj  marbles.clj  mcp.clj  midi_in.clj  midi_monitor.clj  midi_repair.clj  mod.clj  morph.clj  (+33 more)
src/cljseq/spike/: temporal.clj
src/cljseq_ui/: core.cljs
test/cljseq/: analyze_test.clj  arc_test.clj  ardour_test.clj  arp_test.clj  bencode_test.clj  berlin_test.clj  chord_test.clj  clock_test.clj  composition_test.clj  conductor_test.clj  config_test.clj  core_test.clj  corpus_test.clj  ctrl_test.clj  device_test.clj  dirs_test.clj  dsl_test.clj  ensemble_improv_test.clj  ensemble_test.clj  extractor_test.clj  flux_test.clj  fm_test.clj  fractal_test.clj  integration_test.clj  interval_test.clj  ivk_test.clj  journal_test.clj  journey_test.clj  learn_test.clj  link_test.clj  live_test.clj  loop_test.clj  looper_test.clj  m21_test.clj  mcp_test.clj  midi_in_test.clj  midi_repair_test.clj  mod_test.clj  morph_test.clj  mpe_test.clj  (+29 more)
